test/types/tuple/ferguson/error-bounds.good
error-bounds.chpl:3: error: tuple index 3 is out of bounds
error-bounds.chpl:3: note: this tuple contains elements 1..2 (inclusive)
