test/types/tuple/ferguson/error-bounds.chpl
var x = (1,2);

writeln(x(2));

